--- a/EmployeeListRazor/Pages/EmployeeList/Create.cshtml
+++ b/EmployeeListRazor/Pages/EmployeeList/Create.cshtml
@@ -1,8 +1,47 @@
 ﻿@page
 @model EmployeeListRazor.CreateModel
-@{
-    ViewData["Title"] = "Create";
-}
 
-<h1>Create</h1>
+<br />
+<h2 class="text-info">Add New Employee</h2>
+<br />
 
+<div class="border container" style="padding:30px;">
+    <form method="post">
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="Employee.Name"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Employee.Name" class="form-control" />
+            </div>
+            <span asp-validation-for="Employee.Name" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="Employee.Department"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Employee.Department" class="form-control" />
+            </div>
+            <span asp-validation-for="Employee.Department" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="Employee.Position"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Employee.Position" class="form-control" />
+            </div>
+            <span asp-validation-for="Employee.Position" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-3 offset-2">
+                <input type="submit" value="Create" class="btn btn-primary form-control"/>
+            </div>
+            <div class="col-3">
+                <a asp-page="Index" class="btn btn-success from-control"> Back to List </a>
+            </div>
+        </div>
+    </form>
+</div>
