add edit functionality

--- a/EmployeeListRazor/Pages/EmployeeList/Edit.cshtml
+++ b/EmployeeListRazor/Pages/EmployeeList/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model EmployeeListRazor.CreateModel
+@model EmployeeListRazor.EditModel
 
 <br />
-<h2 class="text-info">Add New Employee</h2>
+<h2 class="text-info">Edit Employee</h2>
 <br />
 
 <div class="border container" style="padding:30px;">
     <form method="post">
+        <input type="hidden" asp-for="Employee.Id" />
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-2">
@@ -37,7 +38,7 @@
         </div>
         <div class="form-group row">
             <div class="col-3 offset-2">
-                <input type="submit" value="Create" class="btn btn-primary form-control"/>
+                <input type="submit" value="Update" class="btn btn-primary form-control" />
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success from-control"> Back to List </a>
@@ -47,6 +48,6 @@
 </div>
 
 <!--this below is for client side validation-->
-@section Scripts{ 
-<partial name="_ValidationScriptsPartial" />
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
 }
