--- a/EmployeeListRazor/Pages/EmployeeList/Index.cshtml
+++ b/EmployeeListRazor/Pages/EmployeeList/Index.cshtml
@@ -1,67 +1,92 @@
 ﻿@page
 @model EmployeeListRazor.IndexModel
-@{
-    ViewData["Title"] = "Index";
-}
+
 
 <br />
 
 <div class="container row p-0 m-0">
-    <div class="col-9">
+    <div class="col-6">
         <h2 class="text-info">Employee List</h2>
     </div>
     <div class="col-3">
-     <a asp-page="Create" class="btn btn-info form-control text-white">Add New Employee</a>
+        <a asp-page="Create" class="btn btn-info form-control text-white">Add New Employee</a>
+    </div>
+    <div class="col-3">
+        <a asp-page="Upsert" class="btn btn-info form-control text-white">Add (Upsert) New Employee</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
-         <form method="post">
-          @if (Model.Employees.Count()>0)
-          {
-              <table class="table table-striped border">
-                  <tr class="table-secondary">
-                      <th>
-                          <label asp-for="Employees.FirstOrDefault().Name"></label>
-                      </th>
-                      <th>
-                          <label asp-for="Employees.FirstOrDefault().Department"></label>
-                      </th>
-                      <th>
-                          <label asp-for="Employees.FirstOrDefault().Position"></label>
-                      </th>
-                      <th>
+        <form method="post">
+            @if (Model.Employees.Count() > 0)
+            {
+                <table class="table table-striped border">
+                    <tr class="table-secondary">
+                        <th>
+                            <label asp-for="Employees.FirstOrDefault().Name"></label>
+                        </th>
+                        <th>
+                            <label asp-for="Employees.FirstOrDefault().Department"></label>
+                        </th>
+                        <th>
+                            <label asp-for="Employees.FirstOrDefault().Position"></label>
+                        </th>
+                        <th>
 
-                      </th>
-                  </tr>
-                  @foreach(var item in Model.Employees)
-                  {
-              <tr>
-                  <td>
-                      @Html.DisplayFor(m => item.Name)
-                  </td>
-                  <td>
-                      @Html.DisplayFor(m => item.Department)
-                  </td>
-                  <td>
-                      @Html.DisplayFor(m => item.Position)
-                  </td>
-                  <td>
-                      <button asp-page-handler="Delete" asp-route-id="@item.Id" onClick="return confirm('Are you sure you want to delete?')" class="btn btn-danger btn-sm">Delete</button>
-                      <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
-                  </td>
-              </tr>
-                  }
+                        </th>
+                    </tr>
+                    @foreach (var item in Model.Employees)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(m => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => item.Department)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => item.Position)
+                            </td>
+                            <td>
+                                <button asp-page-handler="Delete" asp-route-id="@item.Id" onClick="return confirm('Are you sure you want to delete?')" class="btn btn-danger btn-sm">Delete</button>
+                                <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
+                            </td>
+                        </tr>
+                    }
 
 
-              </table>
+                </table>
 
-          } else
+            }
+            else
 
-          {
-              <p>No Employees Found!</p>
-          }
+            {
+                <p>No Employees Found!</p>
+            }
 
-         </form>
+        </form>
     </div>
-        
+
+    <div class="col-12" style="text-align:center">
+        <br />
+        <span class="h3 text-info">OR</span>
+    </div>
+
+    <div class="col-12 border p-3">
+        <table id="DT_load" class="table table-striped table-bordered" style="width: 100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th> Department </th>
+                    <th> Position </th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+
 </div>
+
+@section Scripts{ 
+<script src="~/js/employeeList.js"></script>
+
+}
